# Roman_Math_Git_Proj

./: README.md
testing/Roman_Calc/: Makefile  README  config.h  config.status  configure  configure.ac  configure.lineno  libtool
testing/Roman_Calc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
testing/Roman_Calc/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Roman_Math.c  Roman_Math.lo  libRoman_Math.la  main  main.c
testing/Roman_Calc/src/.deps/: Roman_Math.Plo  implementation.Plo  main.Po
testing/Roman_Calc/src/.libs/: libRoman_Math.la  libRoman_Math.lai  libRoman_Math.so.0.0.0  libimplementation.la  libimplementation.lai  lt-main.c  main  main_ltshwrapper
testing/Roman_Calc/tests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Roman_Math.c  Roman_Math.h  Roman_Math_test  Roman_Math_test.c  Roman_Math_test.check  Roman_Math_test.c~
testing/Roman_Calc/tests/.deps/: Roman_Math_test-Roman_Math_test.Po  implementation_test-implementation_test.Po
testing/Roman_Calc/tests/.libs/: Roman_Math_test  Roman_Math_test_ltshwrapper  implementation_test_ltshwrapper  lt-Roman_Math_test  lt-Roman_Math_test.c  lt-implementation_test.c
